--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "dependencies": {
     "next": "15.2.2",
     "projeto_os": "file:",
-    "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
