--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "axios": "^1.8.4",
     "mysql2": "^3.14.0",
     "next": "^15.2.4",
-    "postcss": "^8.5.3",
     "projeto_os": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.3"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2"
+    "eslint-config-next": "15.2.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   }
 }
+
