--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^3.14.0",
     "next": "^15.2.4",
     "projeto_os": "file:",
+    "puppeteer": "^24.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -30,4 +31,3 @@
     "tailwindcss": "^4.1.4"
   }
 }
-
